# Mighty-Realms-backend

./: .gitignore  controller.py  pyproject.toml
src/: app.py
src/controllers/: controller.py
src/routes/: game.py
src/schemas/: field.py  move.py
src/utils/: types.py
